[gd_scene load_steps=54 format=2]

[ext_resource path="res://UI/BOYFRIEND.png" type="Texture" id=1]
[ext_resource path="res://AnimatedSprite.gd" type="Script" id=2]
[ext_resource path="res://BOYFRIEND.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2863, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3272, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1227, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1636, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2863, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3272, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 409, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 818, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1227, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1636, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3681, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4090, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2045, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2454, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4914, 2728, 819, 682 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5733, 2728, 819, 682 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6552, 2728, 819, 682 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7371, 2728, 819, 682 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3681, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1227, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1636, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2045, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2454, 3072, 409, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7362, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7771, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3640, 390, 455 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 390, 3640, 390, 455 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 780, 3640, 390, 455 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3681, 2560, 409, 512 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4090, 2560, 409, 512 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4499, 2560, 409, 512 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4908, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5317, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5726, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6135, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4090, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4499, 3640, 409, 455 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3072, 455, 512 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 455, 3072, 455, 512 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2045, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2454, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2863, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3272, 2340, 409, 585 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7362, 2045, 409, 409 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 7771, 2045, 409, 409 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5726, 2275, 409, 455 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6135, 2275, 409, 455 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6544, 3640, 409, 455 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "up",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "up miss",
"speed": 12.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "right miss",
"speed": 12.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": false,
"name": "leftstop",
"speed": 12.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "thunder",
"speed": 12.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "dodge",
"speed": 12.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Preattack",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "down",
"speed": 12.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "down miss",
"speed": 12.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "left miss",
"speed": 12.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Gothit",
"speed": 12.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "peace",
"speed": 12.0
} ]

[node name="BOYFRIEND" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.41425, -0.84845 )
frames = SubResource( 50 )
animation = "left miss"
playing = true
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.146454, 0.212555 )
current = true
zoom = Vector2( 1.5, 1.5 )

[connection signal="GameOver" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_GameOver"]
[connection signal="Preattack" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_Preattack"]
[connection signal="attack" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_attack"]
[connection signal="dodge" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_dodge"]
[connection signal="down" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_down"]
[connection signal="downMiss" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_downMiss"]
[connection signal="gotHit" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_gotHit"]
[connection signal="idle" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_idle"]
[connection signal="left" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_left"]
[connection signal="leftmiss" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_leftmiss"]
[connection signal="peacesign" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_peacesign"]
[connection signal="right" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_right"]
[connection signal="rightMiss" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_rightMiss"]
[connection signal="thunder" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_thunder"]
[connection signal="up" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_up"]
[connection signal="upMiss" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_upMiss"]
